# hackathon2-todoapp-phase4

./: .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  FIXES_APPLIED.md  HUGGINGFACE_DEPLOYMENT.md  HUGGINGFACE_ENV_QUICK_REFERENCE.md  README.md  README_DEPLOYMENT_FIXES.md  SECURITY.md  TelegramSignalEA_Fixed.mq5  docker-compose.yml  main.py  nextjs-ui-analyzer.skill  pyproject.toml  test_app.py  verify_app.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  check_tables.py  comprehensive_test.py  debug_auth.py  init_db.py  pyproject.toml  requirements.txt  test_auth.py  test_connection.py  test_final_verification.py  test_neon_connection.py  test_password_hash.py  todo_app_local.db  todo_app_local.db.bak
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_conversations_table.py  003_add_messages_table.py  ee81a7486218_update_tables_for_postgresql_.py
backend/docs/: postgresql-considerations.md
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/middleware/: __init__.py
backend/src/database/: __init__.py  connection.py  deps.py  migration_script.py  validation_script.py
backend/src/mcp/: __init__.py  server.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  agent_integration.py  auth_service.py  chat_service.py  conversation_service.py  message_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_chat_api.py
backend/tests/unit/: test_mcp_tools.py
frontend/: .gitignore  (+6 more)
(+192 files in other folders)
